Fix for widget field using incorrect instance property. Fix slight layout issue with color field input.

--- a/base/css/admin.less
+++ b/base/css/admin.less
@@ -61,6 +61,10 @@
 		input[type="text"] {
 			width: 100%;
 		}
+
+		input.siteorigin-widget-input-color {
+			width: auto;
+		}
 	}
 
 	.siteorigin-widget-field-type-slider {
